<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.srijan.motosports.features.models.TSI117SEFragment">

    <com.daimajia.slider.library.SliderLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/tsi17se_viewflipper"
        android:layout_margin="@dimen/about_description">
    </com.daimajia.slider.library.SliderLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/title_tsi17se"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/text_title_tsi17se"
        android:layout_below="@id/tsi17se_viewflipper"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_title_tsi17se">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/model_engine_title"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="@dimen/about_description"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/t1"/>

            <TextView
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/about_description"
                android:text="@string/engine_details_tsi17se"
                />

            <TextView
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/about_description"
                android:text="@string/model_chassis_title"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/about_description"
                android:text="@string/chassis_details_tsi17se"
                />

            <TextView
                android:id="@+id/t5"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/about_description"
                android:text="@string/model_suspension_title"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/about_description"
                android:text="@string/suspension_details_tsi17se"
                />

            <TextView
                android:id="@+id/t7"
                android:layout_width="match_parent"
                android:text="@string/model_bodyworks_title"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginBottom="@dimen/about_description"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/about_description"
                android:text="@string/bodyworks_details_tsi17se"
                />

            <TextView
                android:id="@+id/t9"
                android:layout_width="match_parent"
                android:text="@string/model_electronics_title"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginBottom="@dimen/about_description"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/t10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/about_description"
                android:text="@string/electronics_details_tsi17se"
                />

            <TextView
                android:id="@+id/t11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_tsi17se"
                android:textSize="22sp"
                android:textStyle="bold|italic"
                android:textAlignment="center"
                />

            <Button
                android:id="@+id/button_buynow_tsise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:padding="18dp"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:textColor="#FFFFFF"
                android:background="@drawable/shape_buynow"
                android:text="@string/buy_now"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
