<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.srijan.motosports.features.about.AboutUsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <TextView
                android:text="@string/title_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:id="@+id/text_about_title"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_about"
                android:layout_centerHorizontal="true"
                android:id="@+id/text_about_subtitle"
                android:textSize="25sp"
                android:layout_below="@id/text_about_title"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_description"
                android:id="@+id/text_about_description"
                android:layout_margin="@dimen/about_description"
                android:layout_centerHorizontal="true"
                android:padding="2dp"
                android:layout_below="@id/text_about_subtitle"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_about_latest_model_title"
                android:layout_below="@id/text_about_description"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:text="@string/about_latest_model_title"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_margin="5dp"
                android:id="@+id/about_image_tsi_117"
                android:layout_below="@id/text_about_latest_model_title"
                android:src="@drawable/tsike01"/>

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/text_about_tsi117_model"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_image_tsi_117"
                android:text="@string/about_tsi117_model"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/about_description"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_about_formula_challenge_title"
                android:layout_centerHorizontal="true"
                android:text="@string/about_formula_challenge_title"
                android:layout_below="@id/text_about_tsi117_model"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_about_formula_challenge_description"
                android:layout_below="@id/text_about_formula_challenge_title"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/about_description"
                android:text="@string/about_formula_challenge_description"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
